# miasm

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py  test_requirements.txt
.github/workflows/: tests.yml
example/asm/: shellcode.py  simple.py  test.py
example/disasm/: callback.py  dis_binary.py  dis_binary_lift.py  dis_binary_lift_model_call.py  dis_x86_string.py  full.py  single_instr.py  test.py
example/expression/: access_c.py  asm_to_ir.py  basic_op.py  basic_simplification.py  constant_propagation.py  export_llvm.py  expr_c.py  expr_grapher.py  expr_random.py  expr_reduce.py  expr_translate.py  get_read_write.py  graph_dataflow.py  interfer.py  simplification_add.py  simplification_tools.py  solve_condition_stp.py  test.py
example/jitter/: arm.py  arm_sc.py  mips32.py  msp430.py  run_with_linuxenv.py  sandbox_call.py  sandbox_elf_aarch64l.py  sandbox_elf_ppc32.py  sandbox_pe_x86_32.py  sandbox_pe_x86_64.py  test.py  test_x86_32_seh.py  trace.py  types.py  unpack_upx.py  x86_32.py  x86_64.py
example/loader/: build_pe.py  get_exports.py  minidump_to_pe.py  sc2pe.py
example/symbol_exec/: depgraph.py  dse_crackme.py  dse_strategies.py  single_instr.py  test.py
miasm/analysis/: binary.py  data_flow.py  depgraph.py  dse.py  machine.py
miasm/core/: asmblock.py  cpu.py  locationdb.py  utils.py
miasm/expression/: expression.py  simplifications.py  simplifications_common.py  simplifications_explicit.py
miasm/ir/: analysis.py  ir.py
miasm/jitter/: codegen.py  jitcore_llvm_rs.py  (+1 more)
test/: .gitignore  conftest.py  pytest.ini
(+143 files in other folders)
